<resources>
    <string name="app_name">Drink_app</string>
    <string name="inventory">INVENTORY</string>
    <string name="recepies">RECIPES</string>
    <string name="random_drink">RANDOM DRINK</string>
    <string name="return_to_main">RETURN TO MAIN</string>
    <string name="what_can_i_make">WHAT CAN I MAKE?</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="ingredients_name">Ingredients name</string>
    <string name="search_ingredient_name">Search ingredient name</string>
    <string name="Instructions">Instructions</string>
</resources>